# weatherware

./: README.md  main.py  pyproject.toml
src/weatherware/: cli.py  recommend.py  weather.py
