[project]
name = "weatherware"
version = "0.1.0"
description = "CLI tool that checks the weather and tells you what to wear"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.scripts]
weatherware = "weatherware.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weatherware"]